# app-network-ml

./: .gitignore  ETA_main.py  LA_OPT_NXP_Software_License.txt  LICENSE  README-TFL.md  README.md  Readme.md  SCR-0.0.1.txt  SW-Content-Register.txt  analysis_pkt.sh  br0_config_with_veth.sh  exclude.list  generate_delivery.sh  lucid_cnn.py  lucid_convert.py  lucid_dataset_parser.py  requirements.txt  rsync_to_93.sh  rsync_to_imx93.sh  run_demo.py  run_demo.sh  run_demo_imx95.sh  setup_env.sh  tfl_lucid_predict.py
WebSys/: api.py  conf.py  main.py
deepPacket/: config.py  convert2tfl.py  main.py  model.py  preprocess.py  requirements.txt  run_test.sh  tfl_predict.py  traffic_class_report.py  traffic_flow.py  utils.py
output/: 10t-10n-DOS2019-LUCID-quant-int8.tflite  10t-10n-DOS2019-LUCID-quant-uint8.tflite  10t-10n-DOS2019-LUCID.csv  10t-10n-DOS2019-LUCID.h5  10t-10n-DOS2019-LUCID.tflite  predictions-20230815-225244.csv  test_converter.tflite
sample-dataset/: 10t-10n-DOS2019-dataset-test.hdf5  10t-10n-DOS2019-dataset-val.hdf5  dataset_test.hdf5  dataset_val.hdf5
sources/preprocess/: CMakeLists.txt  config.json  dataset_parser.py  dpdk-l2capfwd.cpp  dpdk-l2capfwd.h  extract_protocols.cpp  extract_protocols.h  fifo_utils.cpp  fifo_utils.h  live_parser.cpp  main.cpp  pcap_parser.cpp  read_packets.cpp  read_packets.h  test  test.cpp  utils.cpp  utils.h
sources/test/: CMakeLists.txt  live_process_bak.cpp  test_fifo_read.py  test_libpcap.cpp  test_live_parser.py  test_live_process.cpp  test_lucid_dataset_parser_dpkt.py  test_offline_process.cpp  test_pyshark_speed.py
(+32 files in other folders)
